@@ -56,19 +56,6 @@ class ezcDbSchemaMysqlReader extends ezcDbSchemaCommonSqlReader implements ezcDb
         'mediumtext' => 'clob',
         'longtext' => 'clob',
     );
-            
-            
-    /**
-     * Returns what type of schema reader this class implements.
-     *
-     * This method always returns ezcDbSchema::DATABASE
-     *
-     * @return int
-     */
-    public function getReaderType()
-    {
-        return ezcDbSchema::DATABASE;
-    }
 
     /**
      * Loops over all the tables in the database and extracts schema information.
